--- a/static/src/scss/list_view.scss
+++ b/static/src/scss/list_view.scss
@@ -257,7 +257,7 @@ i.o_optional_columns_dropdown_toggle {
         }
 
         &:focus {
-            box-shadow: 0 0 0 3px var(--nova-accent-light);
+            box-shadow: none;
         }
     }
 }
